k8s/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:go-web-app
  labels:
    app: go-web-app
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: go-web-app
    template:
      metadata:
        labels:
          app: go-web-app
      spec:
        containers:
          - name: go-web-app
            image: parthtiwari/go-web-app:v1
            ports:
            - containerPort: 8080
