k8s/manifest/ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-targets: /
  spec:
    ingressClassName: nginx
    rules:
    - host: go-web-app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-web-app
              port:
                number: 80
